--- a/project-front.yaml
+++ b/project-front.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: dbsgpwn2062/soundocean-front:1.0
+        image: chungeon/soribada-front:1.0
         ports:
         - containerPort: 8000
         env:
